@@ -156,6 +156,27 @@ SCIP_DECL_EVENTEXITSOL(eventExitsolReopt)
  * memory growing methods for dynamically allocated arrays
  */
 
+/** ensures size for activeconss */
+static
+SCIP_RETCODE ensureActiveconssSize(
+   SCIP_REOPT*           reopt,              /**< reoptimization data structure */
+   SCIP_SET*             set,                /**< global SCIP settings */
+   BMS_BLKMEM*           blkmem,             /**< block memory */
+   int                   num                 /**< minimum number of entries to store */
+   )
+{
+   if( reopt->nmaxactiveconss < num )
+   {
+      int newsize = SCIPsetCalcMemGrowSize(set, num + 1);
+
+      SCIP_ALLOC( BMSreallocBlockMemoryArray(blkmem, &reopt->activeconss, reopt->nmaxactiveconss, newsize) );
+      reopt->nmaxactiveconss = newsize;
+   }
+   assert(num <= reopt->nmaxactiveconss);
+
+   return SCIP_OKAY;
+}
+
 /** ensures, that sols[pos] array can store at least num entries */
 static
 SCIP_RETCODE ensureSolsSize(
@@ -1339,35 +1360,30 @@ SCIP_RETCODE cleanActiveConss(
    BMS_BLKMEM*           blkmem              /**< block memory */
    )
 {
-   int nentries;
    int i;
 
    assert(reopt != NULL);
 
-   /* the hashmap need not to be exist, e.g., if the problem was solved during presolving */
-   if( reopt->activeconss == NULL )
+   /* exit if there are no active constraints */
+   if( reopt->nactiveconss == 0 )
       return SCIP_OKAY;
 
-   nentries = SCIPhashmapGetNEntries(reopt->activeconss);
+   SCIPsetDebugMsg(set, "Cleaning %d active conss.\n", reopt->nactiveconss);
+   assert( reopt->activeconss != NULL );
+   assert( reopt->activeconssset != NULL );
+   assert( reopt->nactiveconss <= reopt->nmaxactiveconss );
 
-   SCIPsetDebugMsg(set, "clean %d active conss\n", nentries);
-
-   /* loop over all entries of the hashmap and reactivate deactivated constraints */
-   for( i = 0; i < nentries; i++ )
+   /* loop over all stored constraints and reactivate deactivated constraints */
+   for( i = 0; i < reopt->nactiveconss; i++ )
    {
-      SCIP_CONS* cons;
-      SCIP_HASHMAPENTRY* entry = SCIPhashmapGetEntry(reopt->activeconss, i);
-
-      if( entry == NULL )
-         continue;
-
-      cons = (SCIP_CONS*)SCIPhashmapEntryGetImage(entry);
-      assert(cons != NULL);
-
-      SCIP_CALL( SCIPconsRelease(&cons, blkmem, set) );
+      assert( reopt->activeconss[i] != NULL );
+      assert(SCIPhashsetExists(reopt->activeconssset, reopt->activeconss[i]));
+      SCIP_CALL( SCIPconsRelease(&reopt->activeconss[i], blkmem, set) );
    }
 
-   SCIP_CALL( SCIPhashmapRemoveAll(reopt->activeconss) );
+   /* also clean up hashset */
+   SCIPhashsetRemoveAll(reopt->activeconssset);
+   reopt->nactiveconss = 0;
 
    return SCIP_OKAY;
 }
@@ -5091,7 +5107,10 @@ SCIP_RETCODE SCIPreoptCreate(
    (*reopt)->addedconsssize = 0;
    (*reopt)->glblb = NULL;
    (*reopt)->glbub = NULL;
+   (*reopt)->nactiveconss = 0;
+   (*reopt)->nmaxactiveconss = 0;
    (*reopt)->activeconss = NULL;
+   (*reopt)->activeconssset = NULL;
 
    SCIP_ALLOC( BMSallocBlockMemoryArray(blkmem, &(*reopt)->varhistory, (*reopt)->runsize) );
    SCIP_ALLOC( BMSallocBlockMemoryArray(blkmem, &(*reopt)->prevbestsols, (*reopt)->runsize) );
@@ -5252,11 +5271,11 @@ SCIP_RETCODE SCIPreoptFree(
    SCIPclockFree(&(*reopt)->savingtime);
 
    /* the hashmap need not to be exist, e.g., if the problem was solved during presolving */
-   if( (*reopt)->activeconss != NULL )
+   if( (*reopt)->activeconssset != NULL )
    {
-      SCIPhashmapFree(&(*reopt)->activeconss);
-      (*reopt)->activeconss = NULL;
+      SCIPhashsetFree(&(*reopt)->activeconssset, blkmem);
    }
+   BMSfreeBlockMemoryArrayNull(blkmem, &(*reopt)->activeconss, (*reopt)->nmaxactiveconss);
 
    if( (*reopt)->glblb != NULL )
    {
@@ -7736,8 +7755,11 @@ SCIP_RETCODE SCIPreoptApplyGlbConss(
       SCIP_CALL( SCIPaddCons(scip, cons) );
 
       /* remember the constraint for re-activation */
-      assert(!SCIPhashmapExists(reopt->activeconss, (void*)cons));
-      SCIP_CALL( SCIPhashmapInsert(reopt->activeconss, (void*)cons, (void*)cons) );
+      assert( ! SCIPhashsetExists(reopt->activeconssset, (void*)cons) );
+      SCIP_CALL( SCIPhashsetInsert(reopt->activeconssset, blkmem, (void*)cons) );
+      SCIP_CALL( ensureActiveconssSize(reopt, set, blkmem, reopt->nactiveconss + 1) );
+      assert(reopt->nactiveconss < reopt->nmaxactiveconss);
+      reopt->activeconss[reopt->nactiveconss++] = cons;
 
       /* don't release the constraint because we would need to capture the constraint anyway */
 
@@ -8222,22 +8244,27 @@ SCIP_RETCODE SCIPreoptSaveActiveConss(
    assert(reopt != NULL);
    assert(transprob != NULL);
    assert(reopt->activeconss == NULL);
+   assert(reopt->activeconssset == NULL);
+   assert(reopt->nactiveconss == 0);
+   assert(reopt->nmaxactiveconss == 0);
 
    conss = transprob->conss;
    nconss = transprob->nconss;
 
    SCIPsetDebugMsg(set, "save %d active conss\n", nconss);
 
-   /* create hashmap */
-   SCIP_CALL( SCIPhashmapCreate(&reopt->activeconss, blkmem, nconss) );
+   /* create hashset and array */
+   SCIP_CALL( SCIPhashsetCreate(&reopt->activeconssset, blkmem, nconss) );
+   SCIP_CALL( ensureActiveconssSize(reopt, set, blkmem, nconss) );
 
    for( i = 0; i < nconss; i++ )
    {
       assert(SCIPconsIsActive(conss[i]));
-      assert(!SCIPhashmapExists(reopt->activeconss, (void*)conss[i]));
+      assert(! SCIPhashsetExists(reopt->activeconssset, (void*)conss[i]));
 
       SCIPconsCapture(conss[i]);
-      SCIP_CALL( SCIPhashmapInsert(reopt->activeconss, (void*)conss[i], (void*)conss[i]) );
+      SCIP_CALL( SCIPhashsetInsert(reopt->activeconssset, blkmem, (void*)conss[i]) );
+      reopt->activeconss[reopt->nactiveconss++] = conss[i];
    }
 
    return SCIP_OKAY;
@@ -8300,27 +8327,23 @@ SCIP_RETCODE SCIPreoptResetActiveConss(
    SCIP_STAT*            stat                /**< dynamic SCIP statistics */
    )
 {
-   int nentries;
    int i;
 
    assert(reopt != NULL);
    assert(reopt->activeconss != NULL);
+   assert(reopt->activeconssset != NULL);
+   assert(reopt->nmaxactiveconss > 0);
 
-   nentries = SCIPhashmapGetNEntries(reopt->activeconss);
+   SCIPsetDebugMsg(set, "Reset %d active conss.\n", reopt->nactiveconss);
 
-   SCIPsetDebugMsg(set, "reset %d active conss\n", nentries);
-
-   /* loop over all entries of the hashmap and reactivate deactivated constraints */
-   for( i = 0; i < nentries; i++ )
+   /* loop over all storeed active constraints and reactivate deactivated constraints */
+   for( i = 0; i < reopt->nactiveconss; i++ )
    {
       SCIP_CONS* cons;
-      SCIP_HASHMAPENTRY* entry = SCIPhashmapGetEntry(reopt->activeconss, i);
 
-      if( entry == NULL )
-         continue;
-
-      cons = (SCIP_CONS*)SCIPhashmapEntryGetImage(entry);
+      cons = reopt->activeconss[i];
       assert(cons != NULL);
+      assert(SCIPhashsetExists(reopt->activeconssset, cons));
 
       /* it can happen that the constraint got globally deleted */
       if( SCIPconsIsDeleted(cons) )
@@ -8348,9 +8371,9 @@ SCIP_Bool SCIPreoptConsCanBeDeleted(
    assert(reopt != NULL);
    assert(cons != NULL);
 
-   /* the hashmap is not initialized, we can delete all constraints */
+   /* the hashset is not initialized, we can delete all constraints */
    if( reopt->activeconss == NULL )
       return TRUE;
 
-   return !SCIPhashmapExists(reopt->activeconss, (void*)cons);
+   return ! SCIPhashsetExists(reopt->activeconssset, (void*)cons);
 }
